# bup_hackathon

./: .gitignore  README.md  facets_b2c.csv  protoype.ipynb
smart-product-category/: Dockerfile  pyproject.toml  readme.md
smart-product-category/app/: api_models.py  config.py  gemini_client.py  main.py  product_utils.py  prompt_loader.py  schema.py  templates.py  woolworths_client.py
smart-product-category/app/prompts/: category_prompt.txt  enhanced_category_prompt.txt
sql/: final_output.sql
