[tool.poetry]
name = "smart-product-category"
version = "0.1.0"
description = ""
authors = ["Abhinav Kumar Singh <asingh50@woolworths.com.au>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-google-genai = "2.0.9"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
langchain = "^0.3.22"
aiohttp = "^3.11.16"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
